Change the java version to 11 to match replit