@@ -8,16 +8,17 @@ import java.util.stream.Collectors;
 
 @SuppressWarnings("unused")
 public class DeclarationOfIndependence {
+
     public List<WordFrequency> getWordFrequencies(String text) {
         return Arrays.stream(text.split(" "))
-                .map(String::toLowerCase)
-                .map(word -> word.replaceAll("[^a-zA-Z]", ""))
-                .filter(word -> !word.isEmpty())
-                .collect(Collectors.groupingBy(word -> word, Collectors.counting()))
-                .entrySet()
-                .stream()
-                .map(entry -> new WordFrequency(entry.getKey(), entry.getValue().intValue()))
-                .sorted(Comparator.reverseOrder())
-                .toList();
+            .map(String::toLowerCase)
+            .map(word -> word.replaceAll("[^a-zA-Z]", ""))
+            .filter(word -> !word.isEmpty())
+            .collect(Collectors.groupingBy(word -> word, Collectors.counting()))
+            .entrySet()
+            .stream()
+            .map(entry -> new WordFrequency(entry.getKey(), entry.getValue().intValue()))
+            .sorted(Comparator.reverseOrder())
+            .collect(Collectors.toList());
     }
 }
